Web Design Container Created

--- a/index.html
+++ b/index.html
@@ -7,3 +7,13 @@
     <title>Simple Web Design</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <div class="container">
+        <h1>Frequently Asked Questions?</h1>
+        <div class="tab">
+            <input type="radio" name="acc" id="acc1">
+            <label for="acc1">
+                <h2>01</h2>
+                <h3>How do I apply?</h3>
+            </label>
+            
