web desigv content tag completed

--- a/index.html
+++ b/index.html
@@ -16,4 +16,9 @@
                 <h2>01</h2>
                 <h3>How do I apply?</h3>
             </label>
-            
+            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eveniet at ipsum, laboriosam mollitia doloribus,
+                 laborum debitis nam consectetur itaque dolor ipsam tempore
+                  soluta temporibus sed nihil hic eligendi, reiciendis excepturi?</p></div>
+       </div>
+       
