web design tab tag created

--- a/index.html
+++ b/index.html
@@ -21,4 +21,19 @@
                  laborum debitis nam consectetur itaque dolor ipsam tempore
                   soluta temporibus sed nihil hic eligendi, reiciendis excepturi?</p></div>
        </div>
-       
+       <div class="tab">
+        <input type="radio" name="acc" id="acc2">
+        <label for="acc2">
+            <h2>02</h2>
+            <h3>Lost or forgotten your passward?</h3>
+        </label>
+        <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Eveniet at ipsum,laborum debitis nam  soluta temporibus sed nihil hic eligendi.</p></div>
+    </div>
+    <div class="tab">
+        <input type="radio" name="acc" id="acc3">
+        <label for="acc3">
+            <h2>03</h2>
+            <h3>How can I make a change to my application?</h3>
+        </label>
+        
