--- a/index.html
+++ b/index.html
@@ -36,4 +36,9 @@
             <h2>03</h2>
             <h3>How can I make a change to my application?</h3>
         </label>
-        
+        <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Eveniet at ipsum, laboriosam mollitia doloribus,
+             laborum debitis nam consectetur itaque dolor ipsam tempore
+              soluta temporibus sed nihil hic eligendi, reiciendis excepturi?</p></div>
+   </div>
+   
