web design tab & content tag created

--- a/index.html
+++ b/index.html
@@ -41,4 +41,14 @@
              laborum debitis nam consectetur itaque dolor ipsam tempore
               soluta temporibus sed nihil hic eligendi, reiciendis excepturi?</p></div>
    </div>
-   
+   <div class="tab">
+    <input type="radio" name="acc" id="acc4">
+    <label for="acc4">
+        <h2>04</h2>
+        <h3>How can I update my name?</h3>
+    </label>
+    <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+</div>
+</div>
+</body>
+</html>
